# franky

./: .gitignore  CMakeLists.txt  README.md  _formulas.tex  _formulas_dark.tex  _r_e_a_d_m_e_8md.html  annotated.html  cartesian__impedance__base_8cpp.html  cartesian__impedance__base_8hpp.html  cartesian__impedance__base_8hpp_source.html  cartesian__impedance__motion_8cpp.html  cartesian__impedance__motion_8hpp.html  cartesian__impedance__motion_8hpp_source.html  cartesian__impedance__tracking__motion_8cpp.html  cartesian__impedance__tracking__motion_8hpp.html  cartesian__impedance__tracking__motion_8hpp_source.html  cartesian__motion_8cpp.html  cartesian__motion_8hpp_source.html  cartesian__state_8hpp.html  cartesian__state_8hpp_source.html  cartesian__velocity__motion_8hpp_source.html  cartesian__velocity__waypoint__motion_8hpp_source.html  cartesian__waypoint__motion_8cpp.html  cartesian__waypoint__motion_8hpp.html  cartesian__waypoint__motion_8hpp_source.html  classes.html  classfranky_1_1_cartesian_impedance_base.html  classfranky_1_1_cartesian_impedance_motion-members.html  classfranky_1_1_cartesian_impedance_motion.html  classfranky_1_1_cartesian_impedance_tracking_motion.html  classfranky_1_1_cartesian_motion-members.html  classfranky_1_1_cartesian_motion.html  classfranky_1_1_cartesian_state-members.html  classfranky_1_1_cartesian_state.html  classfranky_1_1_cartesian_velocity_motion-members.html  classfranky_1_1_cartesian_velocity_motion.html  classfranky_1_1_cartesian_velocity_waypoint_motion-members.html  classfranky_1_1_cartesian_velocity_waypoint_motion.html  classfranky_1_1_cartesian_waypoint_motion-members.html  classfranky_1_1_cartesian_waypoint_motion.html  (+237 more)
.github/workflows/: build_wheels.yml  documentation.yml  publish_fork_wheels.yml
branches/dev/: .buildinfo  development.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
branches/dev/.doctrees/: development.doctree  environment.pickle  index.doctree
branches/dev/_sources/: development.md.txt  index.md.txt
branches/dev/api/: cpp.html  python.html
branches/dev/cpp/: _formulas.aux  annotated.html  cartesian__impedance__base_8hpp.html  cartesian__impedance__base_8hpp_source.html  cartesian__impedance__motion_8cpp.html  cartesian__impedance__motion_8hpp.html  cartesian__impedance__motion_8hpp_source.html  cartesian__impedance__tracking__motion_8hpp_source.html  cartesian__motion_8hpp.html  cartesian__motion_8hpp_source.html  cartesian__state_8hpp.html  cartesian__state_8hpp_source.html  cartesian__velocity__motion_8cpp.html  cartesian__velocity__motion_8hpp.html  cartesian__velocity__motion_8hpp_source.html  cartesian__velocity__waypoint__motion_8cpp.html  cartesian__velocity__waypoint__motion_8hpp.html  cartesian__velocity__waypoint__motion_8hpp_source.html  cartesian__waypoint__motion_8hpp_source.html  classes.html  classfranky_1_1_cartesian_impedance_base-members.html  classfranky_1_1_cartesian_impedance_base.html  classfranky_1_1_cartesian_impedance_motion-members.html  classfranky_1_1_cartesian_impedance_motion.html  classfranky_1_1_cartesian_impedance_tracking_motion-members.html  classfranky_1_1_cartesian_impedance_tracking_motion.html  classfranky_1_1_cartesian_motion-members.html  classfranky_1_1_cartesian_motion.html  classfranky_1_1_cartesian_state.html  classfranky_1_1_cartesian_velocity_motion-members.html  classfranky_1_1_cartesian_velocity_motion.html  classfranky_1_1_cartesian_velocity_waypoint_motion-members.html  classfranky_1_1_cartesian_velocity_waypoint_motion.html  (+225 more)
doc/: Doxyfile  conf.py  cpp_mainpage.md  development.md  index.md  requirements.txt  tutorial.md
doc/api/: cpp.md  python.md
doc/getting-started/: docker.md  faq.md  installation.md
doc/guide/: desk.md  executing-motions.md  gripper.md  motion-types.md  reactions.md  robot.md
docker/common/: manylinux-build-wheels
examples/: cartesian_impedance_tracker.py  joint_impedance_tracker.py  manual_guidance_joint_impedance.py  manual_guidance_joint_impedance_friction.py  tracking_error.py  tracking_error_ik.py
franky/: __init__.py  desk.py  motion.py  reaction.py  robot.py  robot_web_session.py  tracker.py
include/: franky.hpp
include/franky/: cartesian_state.hpp  dynamics_limit.hpp  elbow_state.hpp  gripper.hpp  realtime_value.hpp  robot.hpp  robot_state.hpp  robot_velocity.hpp  twist.hpp  twist_acceleration.hpp  types.hpp  util.hpp
python/: bind_enums.cpp  bind_errors.cpp  bind_misc.cpp  bind_model.cpp  bind_motion_cartesian_pos.cpp  bind_motion_cartesian_vel.cpp  bind_motion_joint_pos.cpp  bind_motion_joint_vel.cpp  bind_motion_torque.cpp  bind_reactions.cpp  bind_robot.cpp  bind_robot_state.cpp  bind_state_repr.cpp  docstrings.hpp  python.cpp  sequential_executor.cpp  sequential_executor.hpp  util.hpp
scripts/: sweep_tracking_error.zsh  sweep_tracking_error_ik.zsh
search/: all_0.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  defines_1.js  enumvalues_0.js  enumvalues_2.js  files_0.js  files_1.js  (+57 more)
src/: robot_pose.cpp  robot_velocity.cpp
src/motion/: cartesian_impedance_base.cpp  cartesian_impedance_motion.cpp  cartesian_impedance_tracking_motion.cpp  cartesian_motion.cpp  cartesian_velocity_motion.cpp  cartesian_velocity_waypoint_motion.cpp  cartesian_waypoint_motion.cpp  exponential_impedance_motion.cpp  impedance_gains_handle.cpp  joint_impedance_base.cpp  joint_impedance_motion.cpp  joint_impedance_tracking_motion.cpp  joint_velocity_waypoint_motion.cpp  joint_waypoint_motion.cpp  measure.cpp  stop_motion.cpp
tools/: generate_docstrings.py
whl/: index.html
whl/by-robot-server-version/: index.html
whl/libfranka-0.14.2/: index.html
whl/libfranka-0.18.0/: index.html
whl/libfranka-0.21.1/: index.html
(+640 files in other folders)
